--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <title>Notes app</title>
     </head>
     <body>
-        <h1>Notes app</h1>
+        <h1>Notes App</h1>
+        <input type="text" id="username-input" />
+        <button id="show-message-button">Add Note</button>
+
         <div id="main-container">
 
         </div>
