--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <input type="text" id="username-input" />
         <button id="show-message-button">Add Note</button>
         <div id="main-container">
+        <div id="error-container">
+            
+        </div>
             
         </div>
         <script type="text/javascript" src="bundle.js"></script>
