--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
     <head>
         <title>Notes app</title>
+        <link rel="stylesheet" href="./style.css" >
     </head>
     <body>
         <h1>Notes App</h1>
-        <input type="text" id="username-input" />
+        <input type="text" id="username-input" placeholder="Enter your note"/>
         <button id="show-message-button">Add Note</button>
-        <div id="main-container">
-        <div id="error-container">
-            
+        <div id="main-container">            
         </div>
             
         </div>
